Added more notes for second chapter.

--- a/notes/Makefile
+++ b/notes/Makefile
@@ -10,3 +10,6 @@ default: $(TARGETS)
 build/%.html: %.md
 	@mkdir -p build/
 	pandoc -c $(CSS) -c style.css -f markdown -t html5 $< -o $@
+
+push:
+	rsync build/* anandology.com:/var/www/anandology.com/nb/2016/http-bottom-up/
